--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
-    <title></title>
+    <title>Order Summary</title>
 </head>
 
 <body>
