--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Order Summary</title>
 </head>
 
-<body>
+<body role="main">
     <div class="card">
         <div class="illustration">
             <img src="src/images/illustration-hero.svg" alt="Girl-listing-to-music">
