--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Order Summary</title>
 </head>
 
-<body role="main">
-    <div class="card">
+<body>
+    <div class="card" role="card">
         <div class="illustration">
             <img src="src/images/illustration-hero.svg" alt="Girl-listing-to-music">
         </div>
