--- a/index.html
+++ b/index.html
@@ -14,28 +14,31 @@
 </head>
 
 <body>
-    <div class="card" role="card">
-        <div class="illustration">
-            <img src="src/images/illustration-hero.svg" alt="Girl-listing-to-music">
-        </div>
-        <div class="content">
-            <h1>Order Summary</h1>
-            <p class="text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
-                like!</p>
-            <div class="plan">
-                <img src="src/images/icon-music.svg" alt="music-icon">
-                <div class="plan-text">
-                    <p class="tag">Annual Plan</p>
-                    <p class="price">$59.99/year</p>
-                </div>
-                <a href="">Change</a>
+    <main>
+        <div class="card" role="card">
+            <div class="illustration">
+                <img src="src/images/illustration-hero.svg" alt="Girl-listing-to-music">
             </div>
-            <a class="payment-link" href="">
-                <div class="payment">Proceed to Payment</div>
-            </a>
-            <a class="cancel" href="">Cancel Order</a>
+            <div class="content">
+                <h1>Order Summary</h1>
+                <p class="text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere
+                    you
+                    like!</p>
+                <div class="plan">
+                    <img src="src/images/icon-music.svg" alt="music-icon">
+                    <div class="plan-text">
+                        <p class="tag">Annual Plan</p>
+                        <p class="price">$59.99/year</p>
+                    </div>
+                    <a href="">Change</a>
+                </div>
+                <a class="payment-link" href="">
+                    <div class="payment">Proceed to Payment</div>
+                </a>
+                <a class="cancel" href="">Cancel Order</a>
+            </div>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
