made changes in main

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <main>
-        <div class="card" role="card">
+    <main role="main">
+        <div class="card">
             <div class="illustration">
                 <img src="src/images/illustration-hero.svg" alt="Girl-listing-to-music">
             </div>
